Refactor to avoid repeating of the same message in exceptions